kubernetes/support/amm-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solana-amm-service
  namespace: support
spec:
  replicas: 3
  selector:
    matchLabels:
      app: solana-amm-service
  template:
    metadata:
      labels:
        app: solana-amm-service
    spec:
      containers:
        - name: solana-amm-service
          image: solana-amm-service:01
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: solana-amm-service-storage
              mountPath: /app/logs
      imagePullSecrets:
        - name: ecr-secret
      volumes:
        - name: solana-amm-service-storage
          persistentVolumeClaim:
            claimName: solana-amm-service-pvc
