kubernetes/support/amm-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: solana-amm-service
  namespace: support
spec:
  selector:
    app: solana-amm-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
